@@ -191,6 +191,7 @@ c5527b17e8a1abab0a5e6f3cf74acef65cb9e17d assets\mmorpg\models\item\uniques\neckl
 0683a67dbabcbc1796b03aa61e136a939acc6f3a assets\mmorpg\models\item\uniques\necklace\necklacesetdrop0.json
 cdd8047abb8d657ab4f808eb4565c91ff09aece0 assets\mmorpg\models\item\uniques\necklace\necklacethunder0.json
 3425af3b7a4796ab3f494c8d745dfd23fad0620c assets\mmorpg\models\item\uniques\necklace\necklacewater0.json
+545d2600fc6a183e1ad47779ccf5e366ea587012 assets\mmorpg\models\item\uniques\necklace\necklace_doomsday.json
 3fc647cc11375ffa4ff579b1e855d44ab5e9eb16 assets\mmorpg\models\item\uniques\necklace\necklace_magic_shield0.json
 08bc20d59051ad49e934d8f90ac61ff696319941 assets\mmorpg\models\item\uniques\necklace\necklace_strength0.json
 a9e34ed257e785a32f50ce1978f60405eb0abf5b assets\mmorpg\models\item\uniques\necklace\necklace_wisdom0.json
@@ -372,6 +373,7 @@ aba71a78b2628b8dad7281eaf6c023a70687600b data\mmorpg\affixes\suffix\of_force.jso
 9b6ecd38bd80e8ef41405e7064f44d4abd84e31a data\mmorpg\affixes\suffix\of_frailty.json
 f907cc7cd470723b686f5cf81a578a7bbb3576f0 data\mmorpg\affixes\suffix\of_giants.json
 f89862f26f4cadf5b6f874b6b7d38037ceba3c2f data\mmorpg\affixes\suffix\of_godhood.json
+a7f5ce0f26891f16459ed2545b735f0295f508f0 data\mmorpg\affixes\suffix\of_growth.json
 c215dbdb1b22523fa77a16fd10f36826e29bcfab data\mmorpg\affixes\suffix\of_guidance.json
 ca04b5af9e55c93fc0713ca587215d424b10b530 data\mmorpg\affixes\suffix\of_hammer_flurry.json
 5e24e113415bda8221d6e6f36d75303da03e346b data\mmorpg\affixes\suffix\of_hidden_sense.json
@@ -393,6 +395,7 @@ f9361835d6a95aa919ac6212e2ecd1b021087ecc data\mmorpg\affixes\suffix\of_rock_skin
 cf0a5e343cada56f26269f3a7739b04a1520cc62 data\mmorpg\affixes\suffix\of_staff_flurry.json
 0ba55a8e2580922aaaa336d47018fe9c04aafcb4 data\mmorpg\affixes\suffix\of_swiftness.json
 be52fc404c28bc38ca8d10f82f39266798ff371b data\mmorpg\affixes\suffix\of_sword_flurry.json
+dd8bc8a4ac50891a4722b720a14d126db00c3161 data\mmorpg\affixes\suffix\of_the_cactus.json
 1b23f0f755bd5cfe9e80848a228d1fd2d5119ba2 data\mmorpg\affixes\suffix\of_the_depths.json
 5564564aa085cb1abdc27cc4475e998163461f9c data\mmorpg\affixes\suffix\of_the_fallen.json
 e5d07e2ea9902047e876cf744f03503f2349c62b data\mmorpg\affixes\suffix\of_the_hydra.json
@@ -569,6 +572,7 @@ c2dd2379f4472d8c5b16ac9ab3e813e7d19e0bce data\mmorpg\compatible_items\mmorpg\uni
 df49c26258e71d5cdb94873512104d06ae2d0433 data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklacesetdrop0.json
 edc9986c8b807078fb7c98625deb5f6e55dcd3e6 data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklacethunder0.json
 492b62d9069f9af9e15a05b021b7d5cb6c6e7ebc data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklacewater0.json
+04ae19372f7a0f7e0d3e2409f976be6e7e12918c data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklace_doomsday.json
 f34a693afd0ecec4c029917a9ecc7b4f1517903f data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklace_magic_shield0.json
 acbb3efe5eec5890572d30a2322fe7437ab42780 data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklace_strength0.json
 7bdc63a2392fe33569057ecc75c7761e3c9720b6 data\mmorpg\compatible_items\mmorpg\uniques\necklace\necklace_wisdom0.json
@@ -666,20 +670,20 @@ f84f1ce7a838be1f934b82167c94c27d8cb6507c data\mmorpg\recipes\mat\crystallized_es
 1ae157ed18f265da83c446ee1daf0941448526ed data\mmorpg\recipes\mat\infused_iron.json
 a03ed1a87b193f1829d9ea2a001540440d0c5539 data\mmorpg\recipes\mat\mythic_essence.json
 89e6b43e91e0217a25a3d5460b52a4b0bbd0860f data\mmorpg\recipes\teleport_scroll.json
-eb77abd47a02df40f25cc3f882b02ce296dde306 data\mmorpg\runes\ano.json
+ed67273aeea63401e77ae2855ddbec1b824c89ff data\mmorpg\runes\ano.json
 9373b99d25e26b012ca8b80123d8be7b162c5d9c data\mmorpg\runes\ber.json
-00580736fe27e98343d6a827ff3b3b2f5cc8faf8 data\mmorpg\runes\cen.json
-86c1238f9bd2950684ecbbbe0c6c8ff342d21dc7 data\mmorpg\runes\dos.json
-aa340d3d9c66f10c702dd38a918ee9177db0476d data\mmorpg\runes\goh.json
-95b82605a6b02ba5f7364aa291f0ecb1a7fd0477 data\mmorpg\runes\ita.json
-322ea6e509a48d53dab6da952dd6c3385f0c925d data\mmorpg\runes\mos.json
+a77fb74fb9c0c58a3d79b739028464f061b1eb42 data\mmorpg\runes\cen.json
+ed956ed031a4d13bb1b896cf9a57c0797353f26e data\mmorpg\runes\dos.json
+567d6cdc9990a866b5499341268d129f0ce2926d data\mmorpg\runes\goh.json
+063ec949ec556f794c127654f911ac6a2914cdb7 data\mmorpg\runes\ita.json
+81e63019e6a2ad0a3b25966625329133b4972040 data\mmorpg\runes\mos.json
 cb20157d8c2a9a4e00f4194c0eee56348ff398f2 data\mmorpg\runes\oni.json
 c167d18849dd1bd2d30bb1b9bc1aa82f061d13ef data\mmorpg\runes\psi.json
-1b4f16cd80c1907870ddfc46f6a7c4ea8b66762a data\mmorpg\runes\qar.json
-ee00576ba685df81735f5ee1726891564ca3ef62 data\mmorpg\runes\rah.json
-0cfe7f6cab84ea9fad5afaee59742ff6abb47db7 data\mmorpg\runes\voh.json
-836240d20a34ea073ee6bdad7160366844ca107a data\mmorpg\runes\wor.json
-d8db86b9ee1236a0be7db74e4a3c3b78e1eee6be data\mmorpg\runes\xah.json
+a23e854d8fd16042b80c656fd101b43e95b7377d data\mmorpg\runes\qar.json
+37e70515a1422d6d044655adba19f3d684fb33ff data\mmorpg\runes\rah.json
+099925fed9ee37a9bd7f9be9be6576dc763bc54a data\mmorpg\runes\voh.json
+c76a36bce7c94d17cd1a57ba3c048145bff8da90 data\mmorpg\runes\wor.json
+e1ff97a5d031e50e47009eddd71edac7239a1ae0 data\mmorpg\runes\xah.json
 9b58fa2256420ce10629bdfc5c88b90b0e8ea017 data\mmorpg\rune_words\2_runes\bloom.json
 209187492313231e12592101b7add91861b32c13 data\mmorpg\rune_words\2_runes\magic.json
 ab9e19f4f914b62731562e8a08f8c62ab32cb68c data\mmorpg\rune_words\2_runes\magma.json
@@ -777,6 +781,7 @@ a75ef8cc5694483d88288cd7438cd671b321b298 data\mmorpg\unique_gears\necklace\neckl
 533d6099bbe63e9bc6c4b66ef9ac66840494bf91 data\mmorpg\unique_gears\necklace\necklacesetdrop0.json
 cee88149aed12443cbd7252ecd38b793b6851b2b data\mmorpg\unique_gears\necklace\necklacethunder0.json
 89a93b005dd857f4d765cb88a7cddccfee774d27 data\mmorpg\unique_gears\necklace\necklacewater0.json
+e9ff1628e1bea9fd3f14d091e2c5c0da10afd029 data\mmorpg\unique_gears\necklace\necklace_doomsday.json
 2a2bc756feb27616644f2792c5c49541a4648383 data\mmorpg\unique_gears\necklace\necklace_magic_shield0.json
 47b97c1b41e7ac3d30f596d6eed9196b997b90d6 data\mmorpg\unique_gears\necklace\necklace_strength0.json
 177e4598cde6723cb352381aa14bfef923a9b4bc data\mmorpg\unique_gears\necklace\necklace_wisdom0.json
