@@ -1,4 +1,4 @@
 {
   "replace": "false",
-  "values": ["mmorpg:necklace/necklace0","mmorpg:necklace/necklace1","mmorpg:necklace/necklace2","mmorpg:necklace/necklace3","mmorpg:necklace/necklace4","mmorpg:uniques/necklace/necklace_magic_shield0","mmorpg:uniques/necklace/necklace_strength0","mmorpg:uniques/necklace/necklace_wisdom0","mmorpg:uniques/necklace/necklaceenergy0","mmorpg:uniques/necklace/necklacefire0","mmorpg:uniques/necklace/necklacegambler0","mmorpg:uniques/necklace/necklacenature0","mmorpg:uniques/necklace/necklacesetdrop0","mmorpg:uniques/necklace/necklacethunder0","mmorpg:uniques/necklace/necklacewater0"]
+  "values": ["mmorpg:necklace/necklace0","mmorpg:necklace/necklace1","mmorpg:necklace/necklace2","mmorpg:necklace/necklace3","mmorpg:necklace/necklace4","mmorpg:uniques/necklace/necklace_doomsday","mmorpg:uniques/necklace/necklace_magic_shield0","mmorpg:uniques/necklace/necklace_strength0","mmorpg:uniques/necklace/necklace_wisdom0","mmorpg:uniques/necklace/necklaceenergy0","mmorpg:uniques/necklace/necklacefire0","mmorpg:uniques/necklace/necklacegambler0","mmorpg:uniques/necklace/necklacenature0","mmorpg:uniques/necklace/necklacesetdrop0","mmorpg:uniques/necklace/necklacethunder0","mmorpg:uniques/necklace/necklacewater0"]
 }
